--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 <body>
   
 <div class="container">
-  <a href="http://links-website.github.io/inima rece">Inima rece</a></br>
+  <a href="http://links-website.github.io/Inima rece">Inima rece</a></br>
 </div>
 
 <script>
