--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
   
 <div class="container">
   
-  <a href="https://victorMaf.github.io/links-website/Inima rece.html">Inima rece</a></br>
+  <a href="https://victorMaf/links-website.github.io/Inima_rece.html">Inima rece</a></br>
   
   
   
