--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
 <div class="container">
   
   <a href="https://victorMaf.github.io/links-website.github.io/Inima_rece.html">Inima rece</a></br>
-  
+  <a href="Inima_rece.html">Inima rece</a></br>
   
   
   
