--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   
   <a href="https://victorMaf.github.io/links-website.github.io/Inima_rece.html">Inima rece</a></br>
   <a href="Inima_rece.html">Inima rece</a></br>
-  
+  <a href="https://links-website.github.io/Inima_rece.html">Inima rece</a></br>
+  <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
   
   
 </div>
