--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   
 <div class="container">
   
-  <a href="https://victorMaf.github.io/links-website.github.io/Inima_rece.html">Inima rece</a></br>
-  <a href="/Inima_rece.html">Inima rece</a></br>
-  <a href="https://links-website.github.io/Inima_rece.html">Inima rece</a></br>
+
+  <a href="/Html_links/Inima_rece.html">Inima rece</a></br>
+
   
 </div>
 
