--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   
 
   <a href="Html_links/Inima_rece.html">Inima rece</a></br>
+  <a href="/Html_links/Inima_rece.html">Inima rece</a></br>
+  <a href="\Html_links/Inima_rece.html">Inima rece</a></br>
   <a href="/Inima_rece.html">Inima rece</a></br>
+  <a href="\Inima_rece.html">Inima rece</a></br>
+  <a href="Inima_rece.html">Inima rece</a></br>
 
   
 </div>
