Update 1001 de nopti - Inima Rece.html

--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -4,6 +4,14 @@
 <head>
   <title>Links-Website</title>
   
+  <style>
+    
+    .top-left {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+  
+  </style>
   
       <meta http-equiv="Refresh" content="5;url=https://teatru--radiofonic.blogspot.com/p/o-mie-si-una-de-nopti-este-o-antologie.html">
       <meta charset="utf-8">
@@ -39,7 +47,9 @@
 <body>
   
 <div class="container">
-        <iframe id="preview-frame" src="https://easyhits4u.net/120873/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
+  
+      <div class="top-left">Reclama se va inchide in 5 secunde</div>
+      <iframe id="preview-frame" src="https://easyhits4u.net/120873/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
       </iframe>
 </div>
 
