--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -48,7 +48,7 @@
   
 <div class="container">
   
-  <div class="top-left"><h1>Reclama se va inchide in 5 secunde</h1></div>
+  <div class="top-left"><h1 style="font-size:160%;">Reclama se va inchide in 5 secunde</h1></div>
       <iframe id="preview-frame" src="https://easyhits4u.net/120873/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
       </iframe>
 </div>
