--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -49,7 +49,7 @@
   
 <div class="container">
   
-  <div class="top-left" style="background-color:powderblue;"><h1 style="font-size:160%;" font color="red">Reclama se va inchide in 5 secunde</h1></div>
+  <div class="top-left" style="background-color:powderblue;"><h1 style="font-size:160%;" <font color="red">Reclama se va inchide in 5 secunde</font></h1></div>
       <iframe id="preview-frame" src="https://www.google.ro/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
       </iframe>
 </div>
