Update 1001 de nopti - Inima Rece.html

--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -6,11 +6,7 @@
   
   <style>
     
-    .top-left {
-      
-      position: absolute;
-      top: 8px;
-      left: 16px;
+  
   
   </style>
   
@@ -49,7 +45,7 @@
   
 <div class="container">
   
-  <div class="top-left" style="background-color:powderblue;text-align:center"><h1 style="font-size:160%;" <font color="red">Reclama se va inchide in 5 secunde</font></h1></div>
+  <center><div style="background-color:powderblue;text-align:center"><font color="red">Reclama se va inchide in 5 secunde</font></div></center>
       <iframe id="preview-frame" src="https://www.google.ro/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
       </iframe>
 </div>
