--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -46,7 +46,7 @@
 <div class="container">
   
   <center><div style="background-color:powderblue;text-align:center"><font color="red">Reclama se va inchide in 5 secunde</font></div></center>
-      <iframe id="preview-frame" src="https://www.google.ro/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
+      <iframe id="preview-frame" src="https://www.clicksud.org/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
       </iframe>
 </div>
 
