Update 1001 de nopti - Inima Rece.html

--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -6,7 +6,14 @@
   
   <style>
 
-  
+  div.absolute {
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 200px;
+  height: 20px;
+  border: 3px solid black;
+}
   
   </style>
   
@@ -45,7 +52,7 @@
   
 <div class="container">
 
-  <center><div style="background-color:black;text-align:center;border:1px solid white"><font size="4" color="red"><b>Reclama se va inchide in 5 secunde        Aici poate fi reclama ta </b></font></div></center>
+  <center><div class="absolute" style="background-color:black;text-align:center;border:1px solid white"><font size="4" color="red"><b>Reclama se va inchide in 5 secunde        Aici poate fi reclama ta </b></font></div></center>
 
     <iframe id="preview-frame" src="https://www.clicksud.org/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
     </iframe>
