--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -75,10 +75,7 @@
 <div class="container">
 
   <center><div class="absolute" style="background-color:black;text-align:center;border:1px solid white">
-    <font size="4" color="red"><b>Reclama se va inchide in&nbsp;</b></font>
-    <div id="countdown" size="4" color="red">5</div> 
-    <font size="4" color="red"><b>&nbsp;secunde</b></font> 
-    <font class="blink" size="4" color="red"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
+    <font size="4" color="red"><b>Reclama se va inchide in&nbsp;</b></font><div id="countdown" size="4" color="red">5</div> <font size="4" color="red"><b>&nbsp;secunde</b></font><font class="blink" size="4" color="red"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
   </div></center>
 
     <iframe id="preview-frame" src="https://www.clicksud.org/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
@@ -96,7 +93,7 @@
  
     if (seconds == 1) {
       temp = document.getElementById('countdown');
-      temp.innerHTML = "all done, bye bye";
+      
       return;
     }
  
