--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -75,7 +75,7 @@
 <div class="container">
 
   <center><div class="absolute" style="background-color:black;text-align:center;border:1px solid white">
-    <font size="4" color="red"><b>Reclama se va inchide in&nbsp;</b></font><font size="4" color="red"><b>&nbsp;secunde</b></font><font class="blink" size="4" color="red"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
+    <font size="4" color="white"><b>Reclama se va inchide in 5 secunde</b></font><font class="blink" size="4" color="red"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
   </div></center>
 
     <iframe id="preview-frame" src="https://www.google.ro/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
@@ -84,26 +84,7 @@
 </div>
 
 <script>
-    var seconds;
-  var temp;
- 
-  function countdown() {
-    seconds = document.getElementById('countdown').innerHTML;
-    seconds = parseInt(seconds, 10);
- 
-    if (seconds == 1) {
-      temp = document.getElementById('countdown');
-      
-      return;
-    }
- 
-    seconds--;
-    temp = document.getElementById('countdown');
-    temp.innerHTML = seconds;
-    timeoutMyOswego = setTimeout(countdown, 1000);
-  } 
- 
-  countdown();
+
 </script>
 
 </body>
