--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -17,7 +17,7 @@
     
           .blink {
       animation: blinker 0.6s linear infinite;
-      color: #1c87c9;
+      color: white;
       font-weight: bold;
       font-family: sans-serif;
       }
@@ -75,7 +75,8 @@
 <div class="container">
 
   <center><div class="absolute" style="background-color:black;text-align:center;border:1px solid white">
-    <font size="4" color="white"><b>Reclama se va inchide in 5 secunde</b></font><font class="blink" size="4" color="red"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
+    <font size="4" color="white"><b>Reclama se va inchide in 5 secunde</b></font>
+    <font class="blink-one" size="4" color="red"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
   </div></center>
 
     <iframe id="preview-frame" src="https://www.google.ro/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
