--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -76,7 +76,7 @@
 
   <center><div class="absolute" style="background-color:black;text-align:center;border:1px solid white">
     <font size="4" color="white"><b>Reclama se va inchide in 5 secunde</b></font>
-    <font class="blink-one" size="4" color="red"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
+    <font class="blink-one" size="4" color="white"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
   </div></center>
 
     <iframe id="preview-frame" src="https://www.google.ro/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
