--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -79,7 +79,7 @@
     <font class="blink-one" size="4" color="white"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
   </div></center>
 
-    <iframe id="preview-frame" src="https://www.google.ro/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
+    <iframe id="preview-frame" src="https://easyhits4u.net/120873/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
     </iframe>
   
 </div>
