--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -10,8 +10,8 @@
   position: absolute;
   top: 0px;
   left: 0;
-  width: 550px;
-  height: 20px;
+  width: 100%;
+  height: 30px;
   border: 3px solid black;
 }
     
