--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -36,6 +36,15 @@
       @keyframes blinker-two {  
       100% { opacity: 0; }
       }
+    
+    
+    .vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
   
   </style>
   
@@ -74,7 +83,7 @@
   
 <div class="container">
 
-  <center><div class="absolute" style="background-color:black;text-align:center;border:1px solid white">
+  <center><div class="absolute" class="vertical-center" style="background-color:black;text-align:center;border:1px solid white">
     <font size="4" color="white"><b>Reclama se va inchide in 5 secunde</b></font>
     <font class="blink-one" size="4" color="white"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
   </div></center>
