--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -70,7 +70,7 @@
 
     <div class="container">
 
-      <center><div class="absolute" class="vertical-center" style="background-color:black;text-align:center;border:1px solid white">
+      <center><div class="absolute" class="vertical-center" style="background-color:black;text-align:center;border:1px solid black">
         <font size="4" color="white"><b>Reclama se va inchide in 5 secunde</b></font>
         <font class="blink-one" size="4" color="white"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
       </div></center>
