Update 1001 de nopti - Inima Rece.html

--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -70,9 +70,9 @@
 
     <div class="container">
 
-      <center><div class="absolute" class="vertical-center" style="background-color:black;text-align:center;border:1px solid black">
-        <font size="4" color="white"><b>Reclama se va inchide in 5 secunde</b></font>
-        <font class="blink-one" size="4" color="white"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
+      <center><div class="absolute"  style="background-color:black;text-align:center;border:1px solid black">
+        <font class="vertical-center" size="4" color="white"><b>Reclama se va inchide in 5 secunde</b></font>
+        <font class="vertical-center" class="blink-one" size="4" color="white"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
       </div></center>
 
         <iframe id="preview-frame" src="https://easyhits4u.net/120873/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 902px;">
