--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -35,7 +35,16 @@
       @keyframes blinker-two {  
         100% { opacity: 0; }}
 
-      .vertical-center {
+      .vertical-center1 {
+        text-align: left;
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);}
+      
+      .vertical-center2 {
+        text-align: right;
         margin: 0;
         position: absolute;
         top: 50%;
@@ -71,8 +80,8 @@
     <div class="container">
 
       <div class="absolute"  style="background-color:black;text-align:center;border:1px solid black">
-        <font class="vertical-center" size="4" color="white"><b>Reclama se va inchide in 5 secunde</b></font>
-        <font class="vertical-center" class="blink-one" size="4" color="white"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
+        <font class="vertical-center1" size="4" color="white"><b>Reclama se va inchide in 5 secunde</b></font>
+        <font class="vertical-center2" class="blink-one" size="4" color="white"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
       </div>
   
       <!--
