--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -36,21 +36,11 @@
         100% { opacity: 0; }}
 
       .vertical-center1 {
-        text-align: left;
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);}
+        text-align: left;}
       
       .vertical-center2 {
-        text-align: right;
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);}
-
+        text-align: right;}
+      
       html body {
         width: 100%;
         height: 100%;
