Update 1001 de nopti - Inima Rece.html

--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -36,10 +36,12 @@
         100% { opacity: 0; }}
 
       .vertical-center1 {
-        text-align: left;}
+        text-align: left;
+        vertical-align: middle;}
       
       .vertical-center2 {
-        text-align: right;}
+        text-align: right;
+        vertical-align: middle;}
       
       html body {
         width: 100%;
