--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -57,6 +57,13 @@
       #preview-frame {
         width: 100%;
         background-color: #fff;}
+      
+       font {
+        display: table-cell;
+        width: 100%;
+        height: 30px;
+        padding: 0px;
+        vertical-align: middle;}
 
 
     </style>
@@ -72,8 +79,8 @@
     <div class="container">
 
       <div class="absolute"  style="background-color:black;text-align:center;border:1px solid black">
-        <font class="vertical-center1" size="4" color="white"><b>Reclama se va inchide in 5 secunde</b></font>
-        <font class="vertical-center2" class="blink-one" size="4" color="white"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
+        <font size="4" color="white"><b>Reclama se va inchide in 5 secunde</b></font>
+        <font class="blink-one" size="4" color="white"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
       </div>
   
       <!--
