Update 1001 de nopti - Inima Rece.html

--- a/Html_links/1001 de nopti - Inima Rece.html
+++ b/Html_links/1001 de nopti - Inima Rece.html
@@ -63,6 +63,7 @@
         width: 50%;
         height: 30px;
         padding: 0px;
+        text-align: center;
         vertical-align: middle;}
 
 
