--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
 <head>
   <title>Links-Website</title>
   
+  <script language=”JavaScript”>
+window.onload = maxWindow;
+function maxWindow()
+{
+window.moveTo(0,0);
+if (document.all)
+{
+top.window.resizeTo(screen.availWidth,screen.availHeight);
+}
+else if (document.layers||document.getElementById)
+{
+if (top.window.outerHeight<screen.availHeight||top.window.outerWidth<screen.availWidth)
+{
+top.window.outerHeight = screen.availHeight;
+top.window.outerWidth = screen.availWidth;
+}
+}
+}
+</script>
+  
   
 </head>
 
@@ -25,16 +45,7 @@
 </div>
 
 <script>
-top.window.moveTo(0,0);
-if (document.all) {
-top.window.resizeTo(screen.availWidth,screen.availHeight);
-}
-else if (document.layers||document.getElementById) {
-if (top.window.outerHeight<screen.availHeight||top.window.outerWidth<screen.availWidth){
-top.window.outerHeight = screen.availHeight;
-top.window.outerWidth = screen.availWidth;
-}
-}
+
 </script>
 
 </body>
