--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="container">
   
 
-  <a href="Html_links/1001 de nopti - Inima Rece.html">1001denopti-InimaRece.html</a></br>
+  <a href="Html_links/1001denopti-InimaRece.html">1001denopti-InimaRece.html</a></br>
   <a href="Html_links/"></a></br>
   <a href="Html_links/"></a></br>
   <a href="Html_links/"></a></br>
