--- a/Html_links/HenryWadsworthLongfellow-Haiavatha(1973).html
+++ b/Html_links/HenryWadsworthLongfellow-Haiavatha(1973).html
@@ -48,7 +48,7 @@
 
       #preview-frame {
         width: 100%;
-        background-color: #fff;}
+        background-color: #000000;}
       
        font {
         display: table-cell;
