--- a/Html_links/HenryWadsworthLongfellow-Haiavatha(1973).html
+++ b/Html_links/HenryWadsworthLongfellow-Haiavatha(1973).html
@@ -76,7 +76,7 @@
         <font class="blink-one" size="4" color="white"><b> &nbsp;&nbsp; Aici poate fi reclama ta </b></font>
       </div>
   
-       <iframe id="preview-frame" src="https://www.rotate4all.com/ptp/promote-180235" name="preview-frame" frameborder="0" noresize="noresize" style="height: 1200px;">
+       <iframe id="preview-frame" src="https://easyhits4u.net/120873/" name="preview-frame" frameborder="0" noresize="noresize" style="height: 1200px;">
       </iframe>
 
     </div>
